fix(css): align with figma

--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,11 @@ body {
     "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue",
     sans-serif;
   min-height: 100vh;
+  background: linear-gradient(148deg, #f9fafb 8.89%, #d2d6db 100.48%);
 }
 
 * {
   box-sizing: border-box;
-}
-
-body {
-  background: linear-gradient(147.52deg, #F9FAFB 8.89%, #D2D6DB 100.48%);
 }
 
 p {
